// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton should be rendered correctly 1`] = `
<button
  className="uui-button-box uui-enabled root uui-icon_button uui-color-neutral"
  tabIndex={-1}
  type="button"
>
  <div
    className="container uui-icon uui-enabled"
    style={Object {}}
  />
</button>
`;

exports[`IconButton should be rendered correctly with props 1`] = `
<button
  aria-disabled={false}
  className="uui-button-box uui-enabled -clickable root uui-icon_button uui-color-info"
  onClick={[Function]}
  tabIndex={0}
  type="button"
>
  <div
    className="container uui-icon uui-enabled"
    style={Object {}}
  >
    <svg
      className=""
    />
  </div>
</button>
`;
